Добавил контроллеры, сделал название директории во множ.числе, добавил проверку в контроллерах на пустоту объекта оставил коммент в BeerController, убрал объект логи сделал через ломбок, в сервисах заинжектил репу через конструктор + ломбок

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.application.name=inventory-service-bar
 
+#Data Source MongoDB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mymongodb
+spring.data.mongodb.authentication-database=admin
+
+#logging.level.org.springframework.data.mongodb.core=DEBUG
+#logging.level.org.springframework.web=DEBUG
+
