--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
-version: '5'
-
+version: '3.1'
 services:
-  mongodb_container:
+  mongo:
     image: mongo:latest
-    container_name: MongoDB
+    container_name: mymongodb
+    restart: always
     ports:
       - '27017:27017'
-    volumes:
-      - mongodb_data_container:/data/db
-
-volumes:
-  mongodb_data_container:
+#    environment:
+#      MONGO_INITDB_ROOT_USERNAME: admin
+#      MONGO_INITDB_ROOT_PASSWORD: root
