Сделано для entites: dto, mapper, resthandler(exceptionNotfound, exceptionValid), Добавлены зависимости mapstruct, jackson для формата JSON, spring validation для валидации объектов на пустоту

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,4 @@ spring.application.name=inventory-service-bar
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=mymongodb
-spring.data.mongodb.authentication-database=admin
-
-#logging.level.org.springframework.data.mongodb.core=DEBUG
-#logging.level.org.springframework.web=DEBUG
-
+spring.data.mongodb.uri=mongodb://localhost:27017/mymongodb
